--- a/couverture/couverture.tex
+++ b/couverture/couverture.tex
@@ -102,8 +102,8 @@
 	\end{tikzpicture}
 	%\hrule
 	\vspace{\stretch{1}}
-	\noindent \normalsize {{\large \textbf{Rapport de stage }  } éffectué au\\}
-	\noindent \normalsize {Port Autonome de Douala  \\}
+	\noindent \normalsize {{\large \textbf{En vu de  }  } l'obtention du diplôme \\}
+	\noindent \normalsize {Ingénieur en meteorologie  \\}
 	\vspace{\stretch{2}}
 	\noindent \normalsize \textit{Par :\\}
 	\vspace{\stretch{2}}
